--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-inner">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -52,16 +52,19 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="hero-section">
+      <!--Hero section-->
+      <!-- <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
+
+      <!--Section Advanteges-->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Advantages</h2>
@@ -117,6 +120,8 @@
           </ul>
         </div>
       </section>
+
+      <!--Section Our team-->
       <section class="our-team-section">
         <div class="container">
           <h2 class="our-team">Our Team</h2>
@@ -293,6 +298,8 @@
           </ul>
         </div>
       </section>
+
+      <!--Section Our portfolio-->
       <section class="section">
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
@@ -404,6 +411,8 @@
         </div>
       </section>
     </main>
+
+    <!--Footer-->
     <footer class="footer">
       <div class="container">
         <div class="logo-footer-block">
@@ -472,7 +481,7 @@
     </footer>
 
     <!--Modal-->
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close" type="button" data-modal-close>
           <svg width="8" height="8" class="modal-close-icon">
