--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <header class="header">
+    <!-- Header -->
+    <header class="header">
       <div class="container header-inner">
         <nav class="header-nav">
           <a class="logo" href="./index.html"
@@ -51,18 +52,23 @@
             </li>
           </ul>
         </address>
+        <button class="header-menu-btn menu-toggle">
+          <svg class="menu-toggle-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-mobile-menu"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
     <main>
       <!--Hero section-->
-      <!-- <section class="hero-section">
+      <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!--Section Advanteges-->
       <section class="section">
@@ -568,6 +574,71 @@
           <button class="modal-button hero-button" type="submit">Send</button>
         </form>
       </div>
+    </div>
+
+    <!--Mobile-menu-->
+    <div class="mobile-menu">
+      <button class="mobile-menu-btn" type="submit">
+        <svg class="mobile-menu-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu-list">
+        <li class="mobile-menu-item">
+          <a class="mobile-menu-link current" href="">Studio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="mobile-menu-link" href="">Portfolio</a>
+        </li>
+        <li class="mobile-menu-item">
+          <a class="mobile-menu-link" href="">Contacts</a>
+        </li>
+      </ul>
+
+      <ul class="mobile-contacts-list">
+        <li class="mobile-contacts-item">
+          <a class="mobile-contacts-link accent" href="tel:+110001111111"
+            >+11 (000) 111-11-11
+          </a>
+        </li>
+        <li class="mobile-contacts-item">
+          <a class="mobile-contacts-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com
+          </a>
+        </li>
+      </ul>
+
+      <ul class="mobile-socials-list">
+        <li class="mobile-socials-item">
+          <a class="mobile-socials-link">
+            <svg class="mobile-socials-icon" width="24" height="40">
+              <use href="./images/icons.svg#icon-insta"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-item">
+          <a class="mobile-socials-link">
+            <svg class="mobile-socials-icon" width="24" height="40">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-item">
+          <a class="mobile-socials-link">
+            <svg class="mobile-socials-icon" width="24" height="40">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-item">
+          <a class="mobile-socials-link">
+            <svg class="mobile-socials-icon" width="24" height="40">
+              <use href="./images/icons.svg#icon-in"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
     <script src="./js/modal.js"></script>
   </body>
