--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/banking_tab.jpg    1x,
                       ./images/banking_tab@2x.jpg 2x
@@ -368,7 +368,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/cashless_tab.jpg    1x,
                       ./images/cashless_tab@2x.jpg 2x
@@ -410,7 +410,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/meditation_tab.jpg    1x,
                       ./images/meditation_tab@2x.jpg 2x
@@ -452,7 +452,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/taxi_tab.jpg    1x,
                       ./images/taxi_tab@2x.jpg 2x
@@ -489,7 +489,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/screen_tab.jpg    1x,
                       ./images/screen_tab@2x.jpg 2x
@@ -531,7 +531,7 @@
                     "
                   />
                   <source
-                    media="(min-width: 768px)"
+                    media="(max-width: 1157px)"
                     srcset="
                       ./images/online_tab.jpg    1x,
                       ./images/online_tab@2x.jpg 2x
